<resources>
    <string name="app_name" translatable="false">HomeTutor</string>
    <string name="full_name_hint">Full Name</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="gender">Gender:</string>
    <string name="usertype">User Type:</string>
    <string name="student">Student</string>
    <string name="teacher">Teacher</string>
    <string name="register">Register</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="samplepost">Female</string>
    <string name="institution">Institution</string>
    <string name="phone">Phone</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="login_now">Login Now</string>
    <string name="don_t_remember_password">Don\'t Remember password?</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>
    <string name="or">or</string>
    <string-array name="UserType">
        <item>Teacher</item>
        <item>Student</item>
    </string-array>
</resources>
